bug 857906 progress indicator spinning on multipart motion jpeg r=duell sr=bz