image/src/imgLoader.cpp
@@ -52,6 +52,7 @@
 #include "nsIContentSecurityPolicy.h"
 #include "nsIChannelPolicy.h"
 #include "nsILoadContext.h"
+#include "nsILoadGroupChild.h"
 
 #include "nsContentUtils.h"
 
@@ -1710,8 +1711,9 @@ nsresult imgLoader::LoadImage(nsIURI *aURI,
     // together as a logical group.
     nsCOMPtr<nsILoadGroup> loadGroup =
         do_CreateInstance(NS_LOADGROUP_CONTRACTID);
-    if (loadGroup)
-      loadGroup->SetLoadGroup(aLoadGroup);
+    nsCOMPtr<nsILoadGroupChild> childLoadGroup = do_QueryInterface(loadGroup);
+    if (childLoadGroup)
+      childLoadGroup->SetParentLoadGroup(aLoadGroup);
     newChannel->SetLoadGroup(loadGroup);
 
     request->Init(aURI, aURI, loadGroup, newChannel, entry, aCX,
